--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,33 @@
 absl-py==0.12.0
 astunparse==1.6.3
 cachetools==4.2.2
-certifi==2020.12.5
+certifi==2021.5.30
 chardet==4.0.0
-click==7.1.2
+click==8.0.1
 cycler==0.10.0
-Flask==1.1.2
+Flask==2.0.1
 flatbuffers==1.12
-gast==0.3.3
-google-auth==1.30.0
+gast==0.4.0
+google-auth==1.31.0
 google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
-grpcio==1.32.0
-h5py==2.10.0
+grpcio==1.34.1
+h5py==3.1.0
 idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.3
+itsdangerous==2.0.1
+Jinja2==3.0.1
+keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 Markdown==3.3.4
-MarkupSafe==1.1.1
-matplotlib==3.4.1
+MarkupSafe==2.0.1
+matplotlib==3.4.2
 numpy==1.19.5
-oauthlib==3.1.0
+oauthlib==3.1.1
 opt-einsum==3.3.0
 pandas==1.2.4
 Pillow==8.2.0
-protobuf==3.15.8
+protobuf==3.17.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
@@ -37,12 +38,12 @@ requests-oauthlib==1.3.0
 rsa==4.7.2
 six==1.15.0
 tensorboard==2.5.0
-tensorboard-data-server==0.6.0
+tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
-tensorflow-estimator==2.4.0
-tensorflow-gpu==2.4.1
+tensorflow==2.5.0
+tensorflow-estimator==2.5.0
 termcolor==1.1.0
 typing-extensions==3.7.4.3
-urllib3==1.26.4
-Werkzeug==1.0.1
+urllib3==1.26.5
+Werkzeug==2.0.1
 wrapt==1.12.1
